
  * netgraph() is a generic function and original function netgraph()
    renamed to netgraph.netmeta()

  * netgraph.netmeta():
    - new argument 'bg.points'
    - new argument 'scale.highlight' which replaces argument
      'lwd.highlight' (which actually was ignored)
    - arguments 'col.highlight' and 'scale.highlight' can be vectors
      with same length as argument 'highlight'

  * forest.netmeta():
    - new argument 'labels' to provide treatment names - similar to
      netgraph()
    - labels set automatically for columns "pscore", "k" and
      "prop.direct" in argument 'leftcols' and 'rightcols'

 ** Internal changes **

  * multiarm():
    - use ginv() to calculate inverse of matrix Lt
    - set very small negative values in matrix W equal to zero
    - object k instead of n denotes number of treatment arms
      (same notation as Rücker & Schwarzer, 2014)

  * new auxiliary internal functions for forest plots


**** netmeta, version 1.0-1, 2019-01-02 ***

 ** User-visible changes **

  * Revision of help page examples
    - to reflect changes in netmeta, versions 0.9-8 and 1.0-0
    - to reduce runtime below 5 seconds (CRAN requirement)


*** netmeta, version 1.0-0, 2018-12-20 ***

 ** Major changes **

  * Orestis Efthimiou <oremiou@gmail.com> is a new co-author of R
    package netmeta

  * New function netmetabin() for network meta-analysis of binary data
    using the Mantel-Haenszel method or the non-central hypergeometric
    distribution

  * New function funnel.netmeta() for 'comparison-adjusted' funnel
    plots

  * New function forest.netcomb() for forest plots of additive network
    meta-analysis

  * New functions netbind(), forest.netbind(), and print.netbind() to
    combine network meta-analysis objects and to generate a forest
    plot with results of several network meta-analyses

  * Separate Indirect from Direct Design Evidence (SIDDE) method
    implemented in netsplit()
